--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 dependencies:
 - role: andrewrothstein.unarchive-deps
-  version: v1.1.2
+  version: v1.1.5
 galaxy_info:
   author: Andrew Rothstein
   company: BlackRock Financial Management
@@ -11,15 +11,6 @@ galaxy_info:
   - MIT
   min_ansible_version: 2.0
   platforms:
-  - name: EL
-    versions:
-    - all
-  - name: Fedora
-    versions:
-    - all
-  - name: Ubuntu
-    versions:
-    - all
   - name: Alpine
     versions:
     - all
@@ -29,6 +20,17 @@ galaxy_info:
   - name: Debian
     versions:
     - buster
-    - jessie
     - stretch
+  - name: EL
+    versions:
+    - all
+  - name: Fedora
+    versions:
+    - all
+  - name: Gentoo
+    versions:
+    - all
+  - name: Ubuntu
+    versions:
+    - all
   role_name: coredns
