--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 dependencies:
 - role: andrewrothstein.unarchive-deps
-  version: v1.1.5
+  version: v1.2.0
 galaxy_info:
   author: Andrew Rothstein
   company: BlackRock Financial Management
@@ -19,15 +19,20 @@ galaxy_info:
     - all
   - name: Debian
     versions:
+    - bullseye
     - buster
     - stretch
   - name: EL
     versions:
-    - all
+    - 7
+    - 8
   - name: Fedora
     versions:
-    - all
+    - 31
+    - 32
   - name: Ubuntu
     versions:
-    - all
+    - bionic
+    - focal
+    - xenial
   role_name: coredns
