--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,7 +10,7 @@
       paths:
         - '{{ role_path }}/vars'
 - name: check for install in {{ coredns_install_dir }}
-  become: yes
+  become: true
   stat:
     path: '{{ coredns_install_dir }}'
   changed_when: False
@@ -18,7 +18,7 @@
 - when: not coredns_binary.stat.exists
   block:
     - name: downloading {{ coredns_url }} to {{ coredns_tmp_tgz }}
-      become: yes
+      become: true
       become_user: root
       get_url:
         url: '{{ coredns_url }}'
@@ -26,29 +26,29 @@
         mode: 0644
         checksum: '{{ coredns_checksum }}'
     - name: mkdir {{ coredns_install_dir }}
-      become: yes
+      become: true
       become_user: root
       file:
         path: '{{ coredns_install_dir }}'
         mode: 0755
         state: directory
     - name: unarchive {{ coredns_tmp_tgz }} to {{ coredns_install_dir }}
-      become: yes
+      become: true
       become_user: root
       unarchive:
-        remote_src: yes
+        remote_src: true
         src: '{{ coredns_tmp_tgz }}'
         dest: '{{ coredns_install_dir }}'
         creates: '{{ coredns_install_exe }}'
   always:
     - name: rm {{ coredns_tmp_tgz }}
-      become: yes
+      become: true
       become_user: root
       file:
         path: '{{ coredns_tmp_tgz }}'
         state: absent
 - name: linking {{ coredns_link }} to {{ coredns_install_exe }}
-  become: yes
+  become: true
   become_user: root
   file:
     src: '{{ coredns_install_exe }}'
