coredns:1.10.0 ansible_{sys,arch} deps->include_role latest CI/deps/meta

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,6 @@
 ---
+- include_role:
+    name: andrewrothstein.unarchive-deps
 - name: resolve platform specific vars
   include_vars: '{{ item }}'
   with_first_found:
@@ -13,7 +15,7 @@
   become: true
   stat:
     path: '{{ coredns_install_dir }}'
-  changed_when: False
+  changed_when: false
   register: coredns_binary
 - when: not coredns_binary.stat.exists
   block:
